# KaggleChallenge

./: .gitignore  AGENTS.md  README.md  main.py  pyproject.toml
doc/: ロードマップ.md  作業ログ.md  技術的知識.md  細かい精度検証.md  調査結果.md
kaggle/output/: preprocessed.csv  submission.csv
kaggle/src/: main.py  main_eda.ipynb  nlp-test.ipynb  nlp-test.py
kaggle/src/modules/: normalizer.py  preprocessor.py
kaggle/src/utils/: dictionary.py  normalizer.py
kaggle/temp/: sample.md
src/: main.py  nlp-test.ipynb
